refactor: Controller, Service, View가 각각 명확한 책임을 가지도록 수정